examples/core/errors/syntax_recovery/02_extra_closing_paren.core.tao
// Syntax Recovery: Extra closing parenthesis
// The parser should recover after the extra )
// and potentially treat this as just (x)
(x))
